# arch_cicd

./: README.md  manage.py  pyproject.toml
arch_cicd/: asgi.py  settings.py  urls.py  wsgi.py
cd_manager/: apps.py  filters.py  forms.py  models.py  serializers.py  tables.py  urls.py  views.py
cd_manager/static/: http_operations.js
cd_manager/templates/: base_generic.html  cicd_overview.html  detail.html  list.html
